add bandit and workglow set up

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -10,9 +10,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -24,11 +32,25 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run Django migrations and tests
+    - name: Create .env
       run: |
-        python manage.py migrate --noinput
-        python manage.py test
-    - name: Run Bandit security scan
+        echo "DJANGO_SECRET_KEY=dummy-key-for-ci" >> .env
+        echo "MYSQL_USER=root" >> .env
+        echo "MYSQL_PASSWORD=root" >> .env
+        echo "MYSQL_HOST=127.0.0.1" >> .env
+
+    - name: Wait for MySQL to be ready
+      run: |
+        sudo apt-get install -y mysql-client
+        until mysql -h127.0.0.1 -uroot -proot -e "SELECT 1"; do sleep 1; done
+
+    - name: Run migrations
+      run: python manage.py migrate
+
+    - name: Run tests
+      run: python manage.py test
+
+    - name: Run Bandit Security Scan
       run: |
         pip install bandit
-        bandit -r .
+        bandit -r . -c .bandit.yaml --exit-zero
