--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,39 @@
 asgiref==3.7.2
+bandit==1.8.3
+colorama==0.4.6
 contourpy==1.3.1
 coverage==7.4.3
 cycler==0.12.1
+dj-database-url==3.0.0
 Django==5.0.2
 django-auditlog==2.3.0
 django-ratelimit==4.1.0
 fonttools==4.55.1
+gunicorn==23.0.0
 kiwisolver==1.4.7
+markdown-it-py==3.0.0
 matplotlib==3.9.3
+mdurl==0.1.2
+mysql-connector-python==9.3.0
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
+pbr==6.1.1
 pillow==11.0.0
+psycopg2-binary==2.9.10
+Pygments==2.19.1
 pyparsing==3.2.0
 python-dateutil==2.8.2
+python-dotenv==1.1.0
 pytz==2024.2
+PyYAML==6.0.2
+rich==14.0.0
 scipy==1.14.1
 seaborn==0.13.2
+setuptools==80.9.0
 six==1.16.0
 sqlparse==0.4.4
+stevedore==5.4.1
+typing_extensions==4.14.0
 tzdata==2024.1
-mysql-connector-python
-python-dotenv
-gunicorn
-whitenoise
-python-dotenv
-dj-database-url
+whitenoise==6.9.0
